edit profile plus some bugs fixed

--- a/app/src/main/res/layout/activity_recipe_new.xml
+++ b/app/src/main/res/layout/activity_recipe_new.xml
@@ -99,8 +99,8 @@
 
         <!-- Example ingredient -->
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="311dp"
             android:text="1. 1kg Polos (Young Jackfruit)"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp" />
