--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -12,6 +12,7 @@
         android:id="@+id/Description"
         android:layout_width="330dp"
         android:layout_height="54dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint=" Enter New Description"
@@ -19,47 +20,37 @@
         android:text=""
         android:textColorHint="#A49584"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.423"
+        app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="595dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
 
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="New Description"
         android:textColor="@color/brown"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.128"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="559dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword2" />
 
     <TextView
         android:id="@+id/textView9"
-        hin
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:hint="Retype Password"
         android:text="Confirm New Password"
         android:textColor="@color/brown"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
+        app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="463dp" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Password"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="364dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView3"
@@ -107,6 +98,7 @@
         android:id="@+id/editTextText11"
         android:layout_width="330dp"
         android:layout_height="46dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint=" Name"
@@ -116,47 +108,53 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="329dp"
         android:layout_height="46dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint=" Name"
+        android:hint=" Email"
         android:inputType="text"
         android:text=""
         android:textColorHint="#A49584"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="300dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Email"
+        android:textColor="@color/brown"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="264dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextText11" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="134dp"
         android:layout_height="54dp"
-        android:text="Update"
+        android:layout_marginTop="16dp"
         android:background="@drawable/button_background"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="661dp" />
+        android:text="Update"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Description" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/brown"
         android:text="Edit Profile"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -167,26 +165,45 @@
         android:id="@+id/editTextNumberPassword"
         android:layout_width="327dp"
         android:layout_height="41dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint=" Enter New Password"
 
+        android:hint=" Enter New Password"
         android:inputType="numberPassword"
         android:textColorHint="#A49584"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="398dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.357"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="New Password"
+        android:textColor="@color/brown"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
     <EditText
         android:id="@+id/editTextNumberPassword2"
         android:layout_width="329dp"
         android:layout_height="46dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint=" Retype Password"
         android:inputType="numberPassword"
         android:textColorHint="#A49584"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="496dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
