--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,6 @@
         <!-- selected star colour-->
         <item name="colorControlActivated">@color/dialog_color_1</item>
     </style>
+
+    <style name="Theme.LastLastRecipe" parent="Base.Theme.RecipesApp"/>
 </resources>
