--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -122,4 +122,17 @@
         app:layout_constraintTop_toBottomOf="@+id/img_fvrt"
         app:srcCompat="@drawable/ic_share"
         app:tint="@color/brown"/>
+
+    <ImageView
+        android:id="@+id/RateResipe"
+        android:layout_width="44dp"
+        android:layout_height="37dp"
+        android:src="@drawable/emoji_4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.961"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
