--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -75,8 +75,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_profile"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="358dp"
+        android:layout_height="429dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -95,11 +95,11 @@
         android:src="@drawable/ic_edit"
         app:layout_constraintBottom_toBottomOf="@+id/img_profile"
         app:layout_constraintEnd_toEndOf="@+id/img_profile"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.784"
         app:layout_constraintStart_toStartOf="@+id/img_profile"
         app:layout_constraintTop_toTopOf="@+id/img_profile"
         app:layout_constraintVertical_bias="1.0"
-        app:tint="@color/black" />
+        app:tint="@color/brown" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
