--- a/app/src/main/res/layout/rate_us_dialog_layout.xml
+++ b/app/src/main/res/layout/rate_us_dialog_layout.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="Rate Our App"
+                android:text="Rate Recipe"
                 android:textColor="#CC000000"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -65,7 +65,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:gravity="center"
-                android:text="If you are enjoy using our app.Would you mind rating us on the app store"
+                android:text="We rely on your taste buds! Rate this dish and make our recipe book shine."
                 android:textSize="16sp" />
 
 
