--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -16,7 +16,7 @@
             android:id="@+id/bg_img_recipe"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/recipe1"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
