--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -94,13 +94,13 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:layout_marginEnd="160dp"
         android:background="@drawable/button_background"
         android:backgroundTint="@color/brown"
         android:paddingHorizontal="16dp"
         android:text="@string/sign_up"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password_container" />
 
     <TextView
