--- a/app/src/main/res/layout/item_recipe_horizontal.xml
+++ b/app/src/main/res/layout/item_recipe_horizontal.xml
@@ -16,13 +16,13 @@
             android:id="@+id/bg_img_recipe"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/recipe1"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"/>
+            app:layout_constraintVertical_bias="0.5" />
 
         <TextView
             android:id="@+id/tv_recipe_name"
