--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -154,12 +154,15 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/brown"
+        android:layout_marginTop="12dp"
         android:text="Edit Profile"
+        android:textColor="@color/brown"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="128dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.096"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
         android:id="@+id/editTextNumberPassword"
@@ -170,7 +173,7 @@
         android:ems="10"
 
         android:hint=" Enter New Password"
-        android:inputType="numberPassword"
+        android:inputType="text|textPassword|textNoSuggestions"
         android:textColorHint="#A49584"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.357"
@@ -198,7 +201,7 @@
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint=" Retype Password"
-        android:inputType="numberPassword"
+        android:inputType="text|textPassword|textNoSuggestions"
         android:textColorHint="#A49584"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.378"
